src/test/deca/context/invalid/provided/ContextSansObjet/ConvFloat_IntFloat.deca
//Description :
//	Vérification contextuelle de convFloat d'une variable int affectée à un float
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = 3.0;
}